--- a/examples/graphite-bosh-lite.yml
+++ b/examples/graphite-bosh-lite.yml
@@ -34,11 +34,20 @@ properties:
   carbon:
     storage_schemas:
       - name: "my_storage_schema"
-        pattern: "^my\\.metrics\\.*" # NB: Note that double escapes - this will evaluate to "my\.metrics\.*"
+        pattern: "^my\\.metrics\\.*" # NB: Note the double escapes - this will evaluate to "^my\.metrics\.*"
         retentions: "60s:1d"
       - name: "my_storage_schema_2"
         pattern: "metrics$"
         retentions: "15s:7d,1m:21d,15m:5y"
+    storage_aggregations:
+      - name: "my_storage_aggregation"
+        pattern: "^my\\.metrics\\.*" # NB: Note the double escapes - this will evaluate to "^my\.metrics\.*"
+        xFilesFactor: "0.5"
+        aggregationMethod: "average"
+      - name: "my_storage_aggregation_2"
+        pattern: "metrics$"
+        xFilesFactor: "0.1"
+        aggregationMethod: "max"
   graphite-web:
     time_zone: Europe/London
     httpd:
