--- a/config/final.yml
+++ b/config/final.yml
@@ -3,4 +3,5 @@ blobstore:
   provider: s3
   options:
     bucket_name: graphite-blobstore
+    endpoint: https://s3-eu-west-1.amazonaws.com
 final_name: graphite
